Add footer to index.html and style it in styles.css

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
     </main>
 
     <div id="tooltip" class="tooltip" aria-hidden="true"></div>
+
+    <footer>
+      <p>Ephraim Teodoro & Hyun Kim.<br>2026 All rights reserved.</p>
+    </footer>
   </body>
 </html>
